ingressController/config/k8sRedisPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-app
  labels:
    app: redis-app-label
spec:
  containers:
  - name: k8s-demo
    image: ideepesh/k8s-redis
    ports:
    - name: redis-app-port
      containerPort: 7080
  - name: redis
    image: redis
    ports:
    - name: redis-port
      containerPort: 6379
