ingressController/config/k8sRedisSvc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-app-service
spec:
  ports:
  - port: 32001
    nodePort: 32001
    protocol: TCP
    targetPort: redis-app-port
    name: redis-app-svc-port
  selector:
    app: redis-app-label
  type: NodePort
